FIX> Depracated tailwind and FEAT> scrollbar dados

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,6 @@
 @tailwind utilities;
 
 @layer utilities {
-  @variants responsive {
-
     /* Hide scrollbar for Chrome, Safari and Opera */
     .no-scrollbar::-webkit-scrollbar {
       display: none;
@@ -17,7 +15,6 @@
       scrollbar-width: none;
       /* Firefox */
     }
-  }
 }
 
 @media (max-width: 640px) {
